manifests/namespace.yaml
#ci-sa:noapply=true
apiVersion: v1
kind: Namespace
metadata:
  name: careers-expo-ii-nz
