manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: careers-expo-ii-nz
  namespace: careers-expo-ii-nz
  labels:
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: careers-expo-ii-nz
  template:
    metadata:
      labels:
        app: careers-expo-ii-nz
        environment: production
    spec:
      automountServiceAccountToken: false
      containers:
      - name: careers-expo-ii-nz
        image: ${CI_REGISTRY_IMAGE}:${APP_VERSION}
        imagePullPolicy: IfNotPresent
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8101
        readinessProbe:
          tcpSocket:
            port: 8101
          initialDelaySeconds: 2
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8101
          initialDelaySeconds: 2
          periodSeconds: 10
          failureThreshold: 10
        resources:
          requests:
            memory: "400Mi"
            cpu: "1"
          limits:
            memory: "400Mi"
            cpu: "1"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
