manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: careers-expo-ii-nz
  namespace: careers-expo-ii-nz
  labels:
    environment: production
spec:
  ports:
    - port: 8101
      targetPort: 8101
  selector:
    app: careers-expo-ii-nz
